Buttons added login page

--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
         <label for="password-input" class="mdc-floating-label">Password</label>
         <div class="mdc-line-ripple"></div>
     </div>
+    <div class="button-container">
+        <button type="button" class="mdc-button cancel">
+          <span class="mdc-button__label">
+            Cancel
+          </span>
+        </button>
+        <button class="mdc-button mdc-button--raised next">
+          <span class="mdc-button__label">
+            Next
+          </span>
+        </button>
+      </div>
   </form>
 
   <script src="bundle-login.js" async></script>
